[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Preston Moore <prestonkmoore@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "day1part1"
path = "src/day1part1.rs"

[[bin]]
name = "day1part2"
path = "src/day1part2.rs"

[[bin]]
name = "day2part1"
path = "src/day2part1.rs"

[[bin]]
name = "day2part2"
path = "src/day2part2.rs"

[[bin]]
name = "day3part1"
path = "src/day3part1.rs"

[[bin]]
name = "day3part2"
path = "src/day3part2.rs"
