[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Preston Moore <prestonkmoore@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
itertools = "0.9.0"
image = "0.23.11"

[lib]
name = "intcode_computer"
path = "lib/intcode_computer.rs"

[[bin]]
name = "day1part1"
path = "src/day1part1.rs"

[[bin]]
name = "day1part2"
path = "src/day1part2.rs"

[[bin]]
name = "day2part1"
path = "src/day2part1.rs"

[[bin]]
name = "day2part2"
path = "src/day2part2.rs"

[[bin]]
name = "day3part1"
path = "src/day3part1.rs"

[[bin]]
name = "day3part2"
path = "src/day3part2.rs"

[[bin]]
name = "day4part1"
path = "src/day4part1.rs"

[[bin]]
name = "day4part2"
path = "src/day4part2.rs"

[[bin]]
name = "day5part1"
path = "src/day5part1.rs"

[[bin]]
name = "day5part2"
path = "src/day5part2.rs"

[[bin]]
name = "day6part1"
path = "src/day6part1.rs"

[[bin]]
name = "day6part2"
path = "src/day6part2.rs"

[[bin]]
name = "day7part1"
path = "src/day7part1.rs"

[[bin]]
name = "day7part2"
path = "src/day7part2.rs"

[[bin]]
name = "day8part1"
path = "src/day8part1.rs"

[[bin]]
name = "day8part2"
path = "src/day8part2.rs"

[[bin]]
name = "day9part1"
path = "src/day9part1.rs"

[[bin]]
name = "day9part2"
path = "src/day9part2.rs"

[[bin]]
name = "day10part1"
path = "src/day10part1.rs"

[[bin]]
name = "day10part2"
path = "src/day10part2.rs"

[[bin]]
name = "day11part1"
path = "src/day11part1.rs"

[[bin]]
name = "day11part2"
path = "src/day11part2.rs"
